# a-server

./: .gitignore  .lcovrc  Brewfile  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DECOMPRESSION_FIX.md  DKC.sav  LICENSE  Makefile  README.md  RomInspector  SMA2.sav  analyze_backbuffer  analyze_backbuffer.cpp  analyze_colors.py  analyze_double_buffer.cpp  analyze_frame.py  analyze_iwram_code.cpp  analyze_lz77.py  analyze_ogdk.py  analyze_ogdk_colors.py  analyze_ogdk_dma  analyze_ogdk_dma.cpp  analyze_ogdk_visual.py  analyze_pal.py  analyze_ppm.py  analyze_ppm2.py  analyze_ppm_quick.py  analyze_screen_base  analyze_screen_base.cpp  analyze_screen_map  analyze_screen_map.cpp  analyze_scroll  analyze_scroll.cpp  analyze_swi02  analyze_swi02.cpp  analyze_tilemap_data.cpp  analyze_tiles  analyze_tiles.cpp  (+145 more)
.github/: bugs.md  copilot-instructions.md  plan.md
.qt/: QtDeploySupport.cmake
assets/: controller_mappings.json
cmake/: CMakeLists.txt  Makefile  core.cmake  tests.cmake
docs/: 100_Percent_Compatibility.md  Audio_System.md  COMPLETION_SUMMARY.md  CPU_Refactoring_Phase1.md  Code_Conventions.md  Compatibility.md  DKC_Audio_Analysis.md  DKC_Cutscene_Diagnostic_Report.md  DKC_Discovery.md  Extension_Template_Guide.md  Implementation_Checklist.md  Input_Navigation_System.md  Input_System.md  M4A_Engine.md  NAS_Server.md  Navigation_Extension_Complete.md  Project_Housekeeping.md  Proper_Emulation_Principles.md  QUICK_REFERENCE.md  ROM_Metadata_Analyzer.md  SMA2_Fix.md  Testing_Suite.md  controller_mappings.schema.json
dumps/: dkc_critter_roi_1246.ppm  dkc_critter_roi_1247.ppm  dkc_critter_roi_1248.ppm  dkc_critter_roi_1249.ppm  dkc_critter_roi_1250.ppm  dkc_critter_roi_1251.ppm  dkc_critter_roi_1252.ppm  dkc_critter_roi_1253.ppm  dkc_critter_roi_1254.ppm  dkc_critter_roi_1255.ppm  dkc_critter_roi_1256.ppm  dkc_critter_roi_1257.ppm  dkc_frame_2645.ppm  (+45 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test_autoinput.cpp
src/AIOServer_autogen/: deps  moc_predefs.h
src/AIOServer_autogen/E6BMKNPBVR/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
src/GBAEmulator_autogen/: deps
src/common/: AssetPaths.cpp  CssVars.cpp  Dotenv.cpp  Logging.cpp  PixelScaler.cpp
src/emulator/common/: Fuzzer.cpp  Logger.cpp  Logger_old.cpp
src/emulator/gba/: APU.cpp  ARM7TDMI.cpp  CheatManager.cpp  Fuzzer.cpp  GBA.cpp  GBA.h  GBAMemory.cpp  GameDB.cpp  Logger.cpp  M4AEngine.cpp  PPU.cpp  PPU.cpp.bak2  ROMMetadataAnalyzer.cpp
src/emulator/switch/: CpuCore.cpp  GpuCore.cpp  MemoryManager.cpp  ServiceManager.cpp  SwitchEmulator.cpp
src/gui/: ActionBindingsDialog.cpp  ButtonListAdapter.cpp  CheatDialog.cpp  ControllerDiagramWidget.cpp  EmulatorSelectAdapter.cpp  EmulatorSettingsAdapter.cpp  GameSelectAdapter.cpp  InputConfigDialog.cpp  LogViewerDialog.cpp  MainMenuAdapter.cpp  MainWindow.cpp  NASAdapter.cpp  NASPage.cpp  NavigationController.cpp  SettingsMenuAdapter.cpp  StreamingDialog.cpp  StreamingHubWidget.cpp  StreamingWebViewPage.cpp  ThumbnailCache.cpp  UIActionMapper.cpp  YouTubeBrowsePage.cpp  YouTubePlayerPage.cpp
src/gui/mainwindow/: MainWindow_Emulation.cpp  MainWindow_InputAudio.cpp  MainWindow_Navigation.cpp  MainWindow_Pages.cpp
src/input/: ActionBindings.cpp  AppActions.cpp  InputBindings_Default.cpp  InputManager.cpp
src/input/manager/: InputManager_Config.cpp  InputManager_Internal.h  InputManager_Mappings.cpp  InputManager_SDL.cpp
src/nas/: NASServer.cpp
src/nas/server/: NASServer_Http.cpp  NASServer_Routing.cpp
src/streaming/: DisneyPlusService.cpp  HuluService.cpp  NetflixService.cpp  StreamingManager.cpp  YouTubeService.cpp
(+385 files in other folders)
